# genesis-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  persona.md  pyproject.toml  schedule.example  settings.yaml  start.cmd  start.sh
.github/workflows/: ci.yml
.plexus/: index.sqlite-shm  project.json
agent/: __init__.py  __main__.py  display.py  menu.py  server.py
agent/console/: display.py  menu.py  wizard.py
agent/engine/: autoloop.py  compaction.py  factory.py  guardrails.py  mcp.py  model.py  registry.py  runner.py  verify.py
agent/gateways/: __init__.py  base.py  manager.py  registry.py  telegram.py  whatsapp.py
agent/runtime/: attachments.py  config.py  context.py  memory.py  runlog.py  scheduler.py  secrets.py  (+2 more)
docs/: index.html
evals/: example_eval.py  example_judge.py
scripts/: fleet.sh  install.ps1  install.sh  new-agent.cmd  new-agent.sh
tests/: test_agent_loop.py  test_attachments.py  test_autoloop.py  test_builtins.py  test_caching.py  test_compaction.py  test_config.py  test_context_editing.py  test_display.py  test_fallback.py  test_gateway_webhook.py  test_gateways.py  test_guardrails.py  test_logging.py  test_planning.py  test_run_controls.py  test_scheduler.py  test_scheduler_server.py  test_scheduling_tools.py  test_secrets.py  test_security.py  test_selfimprove.py  test_semantic_memory.py  test_server.py  test_server_auth.py  test_subagents.py  test_telegram.py  test_thinking.py  test_threads.py  test_tool_quality.py  test_transcripts.py  test_verify.py  test_web_search.py  test_whatsapp.py
(+15 files in other folders)
